--- a/index.html
+++ b/index.html
@@ -3,30 +3,112 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Watan Holdings — Watan Residences & Commercial Building</title>
-
+  <title>Watan Holdings — Watan Residences &amp; Commercial</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 
   <style>
-    /* ... [your full CSS remains unchanged] ... */
+    :root {
+      --accent: #b7791f;
+      --muted: #6b7280;
+      --max-w: 1200px;
+    }
+    * { box-sizing: border-box; }
+    body, html { margin: 0; padding: 0; height: 100%; font-family: Inter, sans-serif; color: #111827; }
+    a { color: var(--accent); text-decoration: none; }
+    .container { max-width: var(--max-w); margin: 0 auto; padding: 0 20px; }
+
+    .nav {
+      position: fixed; top: 0; left: 0; right: 0; z-index: 60;
+      backdrop-filter: blur(6px);
+      background: rgba(255,255,255,0.45);
+      border-bottom: 1px solid rgba(15,23,42,0.06);
+    }
+    .nav-inner { display: flex; align-items: center; justify-content: space-between; padding: 14px 20px; max-width: var(--max-w); margin: 0 auto; }
+    .brand { display: flex; align-items: center; gap: 12px; }
+    .logo { width: 44px; height: 44px; border-radius: 10px; background: linear-gradient(135deg, #f59e0b, #d97706); display: flex; align-items: center; justify-content: center; color: white; font-weight: 700; }
+    .nav-links { display: flex; gap: 18px; font-size: 15px; color: var(--muted); }
+    .nav-links a:hover { color: var(--accent); }
+
+    .hero {
+      position: relative; height: 88vh; min-height: 520px; overflow: hidden; display: flex; align-items: center; justify-content: center;
+    }
+    .slide {
+      position: absolute; inset: 0; overflow: hidden; display: block;
+    }
+    .slide img {
+      width: 100%; height: 100%; object-fit: cover; display: block; transform-origin: center center;
+    }
+    .slide.hidden { opacity: 0; pointer-events: none; }
+    .slide.visible { opacity: 1; pointer-events: auto; }
+
+    .slide-overlay {
+      position: absolute; inset: 0;
+      background: linear-gradient(180deg, rgba(0,0,0,0.18) 0%, rgba(0,0,0,0.45) 60%);
+      display: flex; align-items: center; justify-content: center; padding: 28px;
+    }
+    .hero-content { max-width: 980px; color: white; text-align: center; padding: 6vw; }
+    .hero h1 { font-size: clamp(30px, 6vw, 56px); line-height: 1.02; margin: 0; font-weight: 800; }
+    .hero p { margin-top: 14px; color: rgba(255,255,255,0.92); font-size: clamp(16px,1.6vw,20px); }
+    .actions { margin-top: 20px; display: flex; gap: 12px; justify-content: center; }
+    .btn-primary { background: white; color: #111827; padding: 12px 22px; border-radius: 999px; font-weight: 700; border: 0; cursor: pointer; }
+    .btn-ghost { background: transparent; border: 1px solid rgba(255,255,255,0.22); color: white; padding: 10px 18px; border-radius: 999px; }
+
+    section { padding: 64px 0; }
+    h2 { font-size: 28px; margin: 0 0 12px 0; }
+    .lead { color: var(--muted); max-width: 900px; margin: 8px 0 0; }
+
+    .partners { display: grid; grid-template-columns: repeat(3,1fr); gap: 18px; }
+    .card { background: white; border-radius: 14px; padding: 18px; box-shadow: 0 8px 28px rgba(15,23,42,0.06); }
+
+    .gallery { display: grid; grid-template-columns: repeat(3,1fr); gap: 12px; }
+    .gallery img { width: 100%; height: 220px; object-fit: cover; border-radius: 12px; display: block; }
+
+    .map { border-radius: 12px; overflow: hidden; box-shadow: 0 8px 28px rgba(15,23,42,0.06); }
+
+    .contact { max-width: 640px; margin: 0 auto; text-align: center; }
+    .contact-whatsapp { display: inline-block; margin-top: 10px; color: var(--accent); font-weight: 700; }
+
+    .footer { background: #0f1724; color: #cbd5e1; padding: 28px 0; text-align: center; font-size: 14px; }
+
+    @media (max-width: 900px){
+      .partners { grid-template-columns: repeat(1,1fr); }
+      .gallery { grid-template-columns: repeat(1,1fr); }
+      .hero { height: 78vh; }
+    }
   </style>
 </head>
-<body>
 
-  <div class="nav">
-    <!-- ... navigation bar ... -->
+<body>
+  <div class="nav" role="navigation" aria-label="Main navigation">
+    <div class="nav-inner">
+      <div class="brand">
+        <div class="logo">WH</div>
+        <div>
+          <div style="font-weight:700">Watan Holdings</div>
+          <div style="font-size:13px;color:var(--muted)">Altaher Alalawi — Developer</div>
+        </div>
+      </div>
+      <div class="nav-links" aria-hidden>
+        <a href="#about">About</a>
+        <a href="#partners">Team</a>
+        <a href="#gallery">Gallery</a>
+        <a href="#contact">Contact</a>
+      </div>
+    </div>
   </div>
 
-  <!-- Hero with updated local images -->
   <header class="hero" id="home">
-    <div class="slide" data-index="0" aria-hidden="false">
-      <img src="images/watan1.jpg" alt="Watan project - view 1">
+    <div class="slide" data-index="0">
+      <img src="https://raw.githubusercontent.com/watan-hotel/watan2/main/images/watan1.jfif" alt="Watan project image 1">
     </div>
-    <div class="slide hidden" data-index="1" aria-hidden="true">
-      <img src="images/watan2.jpg" alt="Watan project - view 2">
+    <div class="slide hidden" data-index="1">
+      <img src="https://raw.githubusercontent.com/watan-hotel/watan2/main/images/watan2.jfif" alt="Watan project image 2">
     </div>
-    <div class="slide hidden" data-index="2" aria-hidden="true">
-      <img src="images/watan3.jpg" alt="Watan project - view 3">
+    <div class="slide hidden" data-index="2">
+      <img src="https://raw.githubusercontent.com/watan-hotel/watan2/main/images/watan3.jfif" alt="Watan project image 3">
+    </div>
+    <div class="slide hidden" data-index="3">
+      <img src="https://raw.githubusercontent.com/watan-hotel/watan2/main/images/watan4.jfif" alt="Watan project image 4">
     </div>
 
     <div class="slide-overlay" aria-hidden="true">
@@ -41,114 +123,113 @@
     </div>
   </header>
 
-  <!-- About Section -->
   <section id="about" class="container">
     <h2>About the Project</h2>
     <p class="lead">This luxurious commercial and residential development by <strong>Watan Holdings</strong> is designed to set a new benchmark in modern architecture and urban lifestyle. With elegant façades, world-class materials, and premium finishes, the project offers a seamless blend of comfort and sophistication.</p>
   </section>
 
-  <!-- Team Section -->
   <section id="partners" class="container">
     <h2>Project Team</h2>
-    <div class="partners" style="margin-top:16px">
+    <div class="partners" style="margin-top:16px;">
       <div class="card">
         <div style="font-size:13px;color:var(--muted)">Developer / Owner</div>
-        <div style="font-weight:700;margin-top:8px">Altaher Alalawi</div>
+        <div style="font-weight:700;margin-top:8px;">Altaher Alalawi</div>
         <div style="font-size:13px;color:var(--muted)">Watan Holdings</div>
       </div>
       <div class="card">
         <div style="font-size:13px;color:var(--muted)">Consultant Engineer</div>
-        <div style="font-weight:700;margin-top:8px">Emaar Gulf</div>
-        <div style="margin-top:8px"><a href="https://wa.me/966565390437" target="_blank">WhatsApp +966 56 539 0437</a></div>
+        <div style="font-weight:700;margin-top:8px;">Emaar Gulf</div>
+        <div style="margin-top:8px;"><a href="https://wa.me/966565390437" target="_blank">WhatsApp +966 56 539 0437</a></div>
       </div>
       <div class="card">
         <div style="font-size:13px;color:var(--muted)">Main Contractor</div>
-        <div style="font-weight:700;margin-top:8px">Engineering Corner Contracting</div>
-        <div style="margin-top:8px"><a href="https://wa.me/966547895493" target="_blank">WhatsApp +966 54 789 5493</a></div>
+        <div style="font-weight:700;margin-top:8px;">Engineering Corner Contracting</div>
+        <div style="margin-top:8px;"><a href="https://wa.me/966547895493" target="_blank">WhatsApp +966 54 789 5493</a></div>
       </div>
     </div>
   </section>
 
-  <!-- Gallery Section with local images -->
   <section id="gallery" class="container">
     <h2>Gallery</h2>
-    <div class="gallery" style="margin-top:14px">
-      <img src="images/watan1.jpg" alt="Gallery image 1">
-      <img src="images/watan2.jpg" alt="Gallery image 2">
-      <img src="images/watan3.jpg" alt="Gallery image 3">
-      <img src="images/watan4.jpg" alt="Gallery image 4">
+    <div class="gallery" style="margin-top:14px;">
+      <img src="https://raw.githubusercontent.com/watan-hotel/watan2/main/images/watan1.jfif" alt="Gallery image 1">
+      <img src="https://raw.githubusercontent.com/watan-hotel/watan2/main/images/watan2.jfif" alt="Gallery image 2">
+      <img src="https://raw.githubusercontent.com/watan-hotel/watan2/main/images/watan3.jfif" alt="Gallery image 3">
+      <img src="https://raw.githubusercontent.com/watan-hotel/watan2/main/images/watan4.jfif" alt="Gallery image 4">
     </div>
   </section>
 
-  <!-- Location -->
   <section id="location" class="container">
     <h2>Location</h2>
-    <div class="map" style="margin-top:14px">
-      <iframe
-        title="Watan Project Location"
+    <div class="map" style="margin-top:14px;">
+      <iframe title="Project Location"
         src="https://www.google.com/maps?q=vLyj3V3zG8Ema3Je9&output=embed"
         width="100%" height="420" frameborder="0" style="border:0" allowfullscreen loading="lazy"></iframe>
     </div>
   </section>
 
-  <!-- Contact -->
-  <section id="contact" class="container" style="padding-bottom:88px">
-    <h2>Contact & Inquiries</h2>
-    <div class="contact" style="margin-top:12px">
+  <section id="contact" class="container" style="padding-bottom:88px;">
+    <h2>Contact &amp; Inquiries</h2>
+    <div class="contact" style="margin-top:12px;">
       <p style="color:var(--muted)">For sales, leasing or partnership inquiries — send us a message or contact directly:</p>
-      <p style="margin-top:10px"><a href="mailto:info@wtanhotel.com">info@wtanhotel.com</a></p>
-      <p style="margin-top:6px"><a class="contact-whatsapp" href="https://wa.me/966138414555" target="_blank">WhatsApp +966 13 841 4555</a></p>
+      <p style="margin-top:10px;"><a href="mailto:info@wtanhotel.com">info@wtanhotel.com</a></p>
+      <p style="margin-top:6px;"><a class="contact-whatsapp" href="https://wa.me/966138414555" target="_blank">WhatsApp +966 13 841 4555</a></p>
     </div>
   </section>
 
-  <!-- Footer -->
   <footer class="footer">
     <div class="container">© <span id="year"></span> Watan Holdings — All rights reserved</div>
   </footer>
 
-  <!-- Slideshow Script -->
   <script>
-  (function () {
-    const slides = Array.from(document.querySelectorAll('.slide'));
-    let current = 0;
-    const duration = 4000;
-    const transitionMs = 1200;
+    (function() {
+      const slides = Array.from(document.querySelectorAll('.slide'));
+      let current = 0;
+      const duration = 4000;
+      const transitionMs = 1200;
 
-    slides.forEach((s,i) => {
-      s.style.transition = `opacity ${transitionMs}ms ease-in-out, transform ${transitionMs}ms ease-in-out`;
-      if (i === 0) {
-        s.classList.add('visible');
-        s.style.opacity = 1;
-        s.style.transform = 'scale(1)';
-      } else {
-        s.classList.add('hidden');
-        s.style.opacity = 0;
-        s.style.transform = 'scale(1.08)';
+      slides.forEach((s,i) => {
+        s.style.transition = `opacity ${transitionMs}ms ease-in-out, transform ${transitionMs}ms ease-in-out`;
+        if (i === 0) {
+          s.classList.add('visible');
+          s.style.opacity = 1;
+          s.style.transform = 'scale(1)';
+        } else {
+          s.classList.add('hidden');
+          s.style.opacity = 0;
+          s.style.transform = 'scale(1.08)';
+        }
+      });
+
+      function show(nextIndex) {
+        if (nextIndex === current) return;
+        const prev = slides[current];
+        const next = slides[nextIndex];
+
+        prev.style.opacity = 0;
+        prev.style.transform = 'scale(1.04)';
+        prev.setAttribute('aria-hidden','true');
+
+        next.style.opacity = 1;
+        next.style.transform = 'scale(1)';
+        next.setAttribute('aria-hidden','false');
+
+        current = nextIndex;
       }
-    });
 
-    function show(nextIndex) {
-      if (nextIndex === current) return;
-      const prev = slides[current];
-      const next = slides[nextIndex];
-      prev.style.opacity = 0;
-      prev.style.transform = 'scale(1.04)';
-      prev.setAttribute('aria-hidden','true');
-      next.style.opacity = 1;
-      next.style.transform = 'scale(1)';
-      next.setAttribute('aria-hidden','false');
-      current = nextIndex;
-    }
+      let timer = setInterval(() => {
+        show((current + 1) % slides.length);
+      }, duration);
 
-    let timer = setInterval(() => show((current + 1) % slides.length), duration);
-    const hero = document.querySelector('.hero');
-    hero.addEventListener('mouseenter', () => clearInterval(timer));
-    hero.addEventListener('mouseleave', () => {
-      clearInterval(timer);
-      timer = setInterval(() => show((current + 1) % slides.length), duration);
-    });
-    document.getElementById('year').textContent = new Date().getFullYear();
-  })();
+      const hero = document.querySelector('.hero');
+      hero.addEventListener('mouseenter', () => clearInterval(timer));
+      hero.addEventListener('mouseleave', () => {
+        clearInterval(timer);
+        timer = setInterval(() => show((current + 1) % slides.length), duration);
+      });
+
+      document.getElementById('year').textContent = new Date().getFullYear();
+    })();
   </script>
 
 </body>
